# fastRTC

./: .dockerignore  .env.production  .gitignore  Dockerfile  Dockerfile.backend  README.md  RUN_LOCALLY.md  audio_diagnostics.py  benchmark_results.json  benchmarks.py  deploy.sh  docker-compose.yml  echo_test.py  mem0.md  requirements.txt  run.py  run_assistant.sh  run_echo_test.sh  run_fast.sh  setup.sh  test.py  voice_assistant.py  voice_assistant_with_memory.py  voice_assistant_with_memory_V2.py  voice_assistant_with_memory_V3.py  voice_assistant_with_memory_V4_MULTILINGUAL.py
a_mem/: memory_system.py
backend/: .env  .env.development  .env.example  Dockerfile  gradio4.py  pyproject.toml  requirements.txt  requirements_backup.txt  requirements_minimal.txt  start_clean.py  start_original_backup.py
backend/app/: globals.py  main.py  main_backup.py
backend/app/api/: http_routes.py  http_routes_backup.py  ws_routes.py  ws_routes_backup.py
backend/app/core/: auth.py  config.py  config_backup.py  config_v1.py
backend/app/schemas/: __init__.py  common_schemas.py  ws_schemas.py
backend/app/services/: assistant_service.py
backend/docs/: TODO_XTTS_integration.md  TODOmulti_user.md  TODOstartup_optimization_plan.md  T_01_dockerization_efficiency_plan.md  T_02_PIPER_tts_integration.md
backend/docs/misc/: check_llm_services.py  complete_tts_fix_guide.md  debug_audio_pipeline.py  debug_memory.py  gradio2_implementation_plan.md  test_critical_fixes_simple.py  test_phase3.py  test_phase4.py  voice_mapping_fix_plan.md
backend/docs/tasks/: DONE_improving_STT_performance.md  DONEconfiguration_centralization_report.md  phase1_infrastructure_completion_report.md  phase2_audio_components_completion_report.md  phase3_memory_llm_services_completion_report.md  phase4_fastrtc_integration_completion_report.md  phase5_completion_report.md
backend/src/a_mem/: memory_system.py  retrievers.py
backend/src/audio/: __init__.py
backend/src/config/: audio_config.py  env_loader.py  network_config.py  settings.py
backend/src/core/: exceptions.py  interfaces.py  main.py  voice_assistant.py
backend/src/integration/: __init__.py  callback_handler.py  fastrtc_bridge.py
backend/src/memory/: __init__.py  cache.py  manager.py
backend/src/services/: __init__.py  async_manager.py
backend/src/utils/: __init__.py  logging.py  process_killer.py  sota_adaptive_vad.py
backend/tests/: conftest.py
backend/tests/fixtures/: audio_samples.py
docs/: T_01_dockerization_efficiency_plan.md  development-guide.md  language_detection.md  mem0_advanced.md  mem0_api.md  refactoring_plan.md
fastrtc_voice_assistant/: .coverage  .dockerignore  .env  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  check_mediapipe.py  complete_tts_fix_guide.md  docker-compose.yml  download_models.py  gradio2.py  gradio2_implementation_plan.md  gradio3.py  gradio3_colorful.py  gradio3_debug.py  gradio3_enhanced_debug.py  gradio_colorful.py  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  start.py  start_clean.py  start_original_backup.py  stt_tts_fix_plan.md  test_config.py  test_critical_fixes.py  test_critical_fixes_simple.py  test_phase4.py  voice_mapping_fix_plan.md
fastrtc_voice_assistant/chroma_db/: chroma.sqlite3
fastrtc_voice_assistant/docs/: DONEconfiguration_centralization_report.md  TODO_FastAPI_Backend_Plan.md  TODO_XTTS_integration.md  TODO_improving_STT_performance.md  TODOstartup_optimization_plan.md  T_02_PIPER_tts_integration.md  architecture.md  configuration.md  deployment_guide.md  multi_user.md  testing_guide.md
fastrtc_voice_assistant/docs/misc/: requirements-dev.txt
fastrtc_voice_assistant/docs/tasks/: DONEconfiguration_centralization_report.md  phase2_audio_components_completion_report.md  phase5_completion_report.md
fastrtc_voice_assistant/monitoring/prometheus.yml/: prometheus.yml
fastrtc_voice_assistant/src/: __init__.py
fastrtc_voice_assistant/src/a_mem/: __init__.py  memory_system.py  retrievers.py
fastrtc_voice_assistant/src/audio/engines/stt/: __init__.py  base.py  huggingface_stt.py
fastrtc_voice_assistant/src/audio/engines/tts/: __init__.py  kokoro_tts.py
fastrtc_voice_assistant/src/audio/language/: detector.py
fastrtc_voice_assistant/src/audio/processors/: __init__.py  base.py  bluetooth_processor.py
fastrtc_voice_assistant/src/config/: __init__.py  audio_config.py  deployment_config.py  language_config.py  network_config.py  settings.py
fastrtc_voice_assistant/src/core/: __init__.py  main.py  voice_assistant.py
fastrtc_voice_assistant/src/integration/: callback_handler.py  fastrtc_bridge.py
fastrtc_voice_assistant/src/memory/: conversation.py  manager.py
fastrtc_voice_assistant/src/services/: async_manager.py  llm_service.py
fastrtc_voice_assistant/src/utils/: async_utils.py  logging.py  sota_adaptive_vad.py
fastrtc_voice_assistant/tasks/: phase1_infrastructure_completion_report.md  phase3_memory_llm_services_completion_report.md  phase4_fastrtc_integration_completion_report.md
fastrtc_voice_assistant/tests/: __init__.py  conftest.py
fastrtc_voice_assistant/tests/fixtures/memory/: MEMORY_ISSUE_ANALYSIS_AND_FIX.md  compare_memory_versions.py  debug_memory_comparison.py  memory_debug_report_20250610_150912.json
fastrtc_voice_assistant/tests/integration/: test_audio_pipeline.py  test_fastrtc_integration.py  test_full_conversation.py  test_full_system.py  test_llm_integration.py  test_memory_integration.py  test_performance.py  test_startup_and_e2e_performance.py  test_stt_end_to_end.py  test_voice_assistant.py
fastrtc_voice_assistant/tests/mocks/: mock_llm.py  mock_memory.py
fastrtc_voice_assistant/tests/unit/: test_audio_processors.py  test_conversation.py  test_language_detection.py  test_llm_service.py  test_memory_manager.py  test_response_cache.py  test_stt_engines.py  test_tts_engines.py
frontend/react-vite/: Dockerfile  app.json  next.config.ts  package.json
tasks/: 000-production-docker-webrtc-complete.md  005-dockerization-production-build.md
(+34 files in other folders)
